# praatIO

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  DEVELOP.md  LICENSE  README.md  README.rst  README.txt  UPGRADING.md  pyproject.toml  setup.py
.github/workflows/: run-tests.yml
docs/: audioio.html  dataio.html  index.html  kgio.html  pitch_and_intensity.html  praat_scripts.html  praatio.html  praatio_scripts.html  search.js  search.json  tgio.html
docs/applied_scripts/: index.html  sppas_util.html  xsampa.html
docs/praatio/: audio.html  audioio.html  data_classes.html  data_points.html  dataio.html  kgio.html  klattgrid.html  pitch_and_intensity.html  praat_scripts.html  praatio_scripts.html  textgrid.html  tgio.html  utilities.html
docs/utilities/: index.html  myMath.html  timit.html  utils.html  xsampa.html
examples/: __init__.py  add_tiers.py  anonymize_recording.py  auto_segment_speech.py  calculate_duration.py  correct_misaligned_tiers.py  deleteVowels.py  delete_vowels.py  extract_subwavs.py  getPitch.py  get_pitch.py  get_pitch_and_formants.py  get_vowel_points.py  klatt_resynthesis.py  merge_adjacent_intervals.py  merge_tiers.py  splice_example.py  split_audio_on_tier.py  sppas_post_process.py  textgrid_set_operations.py
examples/files/: bobby_longfile.PointProcess  bobby_phones.TextGrid  bobby_words.TextGrid  bobby_words_with_newlines.TextGrid  bobby_words_with_newlines_longfile.TextGrid  bobby_words_with_newlines_longfile_elan.TextGrid  damon_set_test.TextGrid  mary.PitchTier  mary.TextGrid  mary_misaligned.TextGrid
examples/test/: integration_tests.py  io_tests.py  textgrid_tests.py  tg_tests.py
praatio/: __init__.py  audio.py  audioio.py  common.py  data_points.py  dataio.py  kgio.py  klattgrid.py  pitch_and_intensity.py  praatIO.py  praat_scripts.py  praatio_scripts.py  textgrid.py  textgrid_io.py  tgio.py
praatio/applied_scripts/: __init__.py  sppas_util.py  xsampa.py
praatio/data_classes/: data_point.py  interval_tier.py  klattgrid.py  point_tier.py  textgrid.py  textgrid_tier.py
praatio/praatScripts/: __init__.py  annotate_silences.praat  change_gender.praat  change_intensity.praat  get_formants.praat  get_intensity.praat  get_intensity_via_python.praat  get_pitch.praat  get_pitch_and_intensity.praat  get_pitch_and_intensity_segments.praat  get_pitch_and_intensity_via_python.praat  get_pitchtier.praat  get_pulses.praat  get_spectral_info.praat  resynthesize_duration.praat  resynthesize_from_klattgrid.praat  resynthesize_pitch.praat  sound_to_klattgrid.praat
praatio/utilities/: __init__.py  constants.py  errors.py  external_data_utils.py  myMath.py  my_math.py  textgrid_io.py  timit.py  utils.py  xsampa.py
src/: __init__.py  praatIO.py
test/: addTiers.py  add_tiers.py  audio_tests.py  calculate_duration.py  data_points_tests.py  extractSubwavs.py  getVowelPoints.py  interval_tier_tests.py  io_tests.py  klatt_resynthesis.py  klattgrid_tests.py  mergeTiers.py  merge_adjacent_intervals.py  merge_tiers.py  pitch_and_intensity_tests.py  point_tier_tests.py  praatio_test_case.py  testing_utils.py  textgrid_tests.py
test/files/: bobby.KlattGrid  bobby.PointProcess  bobby_phones.TextGrid  bobby_phones_elan.TextGrid  mary_longfile.PitchTier  (+3 more)
tests/: praatio_test_case.py  test_audio.py  test_data_points.py  test_interval_tier.py  test_io.py  test_klattgrid.py  test_pitch_and_intensity.py  test_point_tier.py  test_praatio_scripts.py  test_textgrid.py  testing_utils.py
tutorials/: Using PraatIO.ipynb  empty_textgrid.TextGrid  tutorial1_intro_to_praatio.ipynb
(+41 files in other folders)
