[project]
name = "praatio"
version = "6.2.2"
description = "A library for working with praat, textgrids, time aligned audio transcripts, and audio files."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Tim Mahrt", email = "timmahrt@gmail.com" }
]
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/timmahrt/praatIO" }

dependencies = [
    "typing_extensions",
]

[tool.hatch.build.targets.wheel]
packages = [
    "praatio",
    "praatio.utilities",
    "praatio.data_classes",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
