[project]
name = "praatio"
version = "7.0.0"
description = "A library for working with praat, textgrids, time aligned audio transcripts, and audio files."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tim Mahrt", email = "timmahrt@gmail.com" }
]
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/timmahrt/praatIO" }

keywords = ["praat", "textgrid", "audio", "speech", "phonetics"]
classifiers = [
    "5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "typing_extensions",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coveralls",
]

[tool.hatch.build.targets.wheel.force-include]
"praatio/py.typed" = "praatio/py.typed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
